@@ -163,8 +163,11 @@
             "rct2ww.scenery_wall.wpalm05",
             "$DAT:0CBD0703|IRPALM5C",
             "rct2ww.scenery_small.sbh3cac1",
+            "fidwell.scenery_small.sbh3cac1",
             "rct2ww.scenery_small.sbh3cac2",
+            "fidwell.scenery_small.sbh3cac2",
             "rct2ww.scenery_small.sbh3cac3",
+            "fidwell.scenery_small.sbh3cac3",
             "rct2ww.scenery_small.sbh3cskl",
             "$DAT:0CBD0701|IR3CSKLC",
             "rct2ww.scenery_small.sbh3oscr",
