@@ -1,0 +1,41 @@
+{
+    "id": "fidwell.scenery_small.sbh3cac3",
+    "authors": ["Frontier Studios"],
+    "version": "1.0",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 20,
+        "removalPrice": 15,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 112,
+        "sceneryGroup": "fidwell.scenery_group.trees_dkso",
+        "isTree": true,
+        "shape": "4/4",
+        "hasNoSupports": true,
+        "hasPrimaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -16, "y": -110 },
+      { "path": "images/1.png", "x": -20, "y": -110 },
+      { "path": "images/2.png", "x": -23, "y": -106 },
+      { "path": "images/3.png", "x": -13, "y": -107 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Cactus",
+            "de-DE": "Kaktus",
+            "sv-SE": "Kaktus",
+            "zh-CN": "仙人掌",
+            "cs-CZ": "Kaktus",
+            "ko-KR": "선인장",
+            "pl-PL": "Kaktus",
+            "ru-RU": "Кактус",
+            "pt-BR": "Cacto",
+            "ja-JP": "サボテン",
+            "fr-FR": "Cactus",
+            "eo-ZZ": "Kakto",
+            "fi-FI": "Kaktus"
+        }
+    }
+}
