@@ -36,6 +36,9 @@
 - New object: Roof (toontowner.scenery_small.ttpirf08)
 - New object: Football (rct2.scenery_small.ball3)
 - New object: Vine Tree (rct2ww.scenery_small.1x1atre2)
+- New object: Cactus (rct2ww.scenery_small.sbh3cac1)
+- New object: Cactus (rct2ww.scenery_small.sbh3cac2)
+- New object: Cactus (rct2ww.scenery_small.sbh3cac3)
 - New object: Roman Palace Corner Piece (rct2tt.scenery_large.corns2x2)
 - New object: Small Speaker (rct2tt.scenery_small.speakr01)
 - Fixed object: Incense Cedar Tree (rct2.scenery_small.tic)
